--- a/App/main_app/Content/IndexContent.html
+++ b/App/main_app/Content/IndexContent.html
@@ -46,4 +46,10 @@
 					<input required type="text" name="mylogin">
 					<button>Отправить</button>
 				</form>
+				
+				
+				  <form enctype="multipart/form-data" method="post">
+				   <p><input type="file" name="f[]" multiple>
+				   <input type="submit" value="Отправить"></p>
+				  </form> 
 			</section>
